src/design-system/tokens.scss
:root {
  // Icons
  .x-icon--light-bulb-on {
    --x-size-stroke-width-icon-default: 0.8px;
  }

  // Typography
  --x-color-text-secondary: var(--x-color-base-neutral-35);

  // Tag
  --x-color-border-tag-default: var(--x-color-base-neutral-70);
  --x-color-background-tag-default-selected: var(--x-color-base-accent);
  --x-color-text-tag-default-selected: var(--x-color-base-neutral-100);
  --x-color-text-tag-default: var(--x-color-base-neutral-35);
  --x-color-border-tag-default-selected: var(--x-color-base-accent);
  --x-size-gap-tag-default: var(--x-size-base-03);
  --x-number-font-weight-tag-default-selected: var(--x-number-font-weight-base-bold);

  // Dropdown
  --x-color-border-dropdown-toggle-default: transparent;
  --x-size-padding-left-dropdown-toggle-default: 0;
  --x-size-padding-right-dropdown-toggle-default: 0;
  --x-size-width-dropdown: 100%;
  --x-color-text-dropdown-toggle-default: var(--x-color-neutral-10);

  // Layout
  --x-size-margin-left-layout-s: var(--x-size-base-10);
  --x-color-background-layout-header-backdrop: transparent;
  --x-color-background-layout-header: var(--x-color-base-neutral-100);

  // Grid
  --x-size-min-width-grid-item: var(--x-size-base-20);
  --x-size-gap-grid: var(--x-size-base-07) var(--x-size-base-05);
  --x-size-padding-grid: var(--x-size-base-06) 0;
  .x-partial-result {
    --x-size-padding-grid: 0;
  }

  // Image
  --x-number-aspect-ratio-picture: 3/4;

  // Result
  --x-size-gap-result-default: var(--x-size-base-02);

  // Message
  --x-size-border-radius-message-default: 0;

  .x-message {
    text-align: center;
  }

  // Input
  --x-number-font-weight-input-group-default-button: var(--x-number-font-weight-base-regular);
  --x-size-font-input-group-default: var(--x-size-font-base-m);
  --x-size-gap-input-group-default: var(--x-size-base-05);
  --x-size-height-input-group-default: var(--x-size-base-08);
  --x-size-line-height-input-group-default: var(--x-size-font-base-l);

  .x-input {
    padding-top: var(--x-size-base-03);
    padding-bottom: var(--x-size-base-03);
  }

  // Aside
  --x-size-width-layout-aside: 480px;

  // Facets
  --x-color-text-facet-default: var(--x-color-base-lead);
  --x-size-line-height-filter-default: var(--x-size-line-height-base-m);
  --x-size-gap-facet-header-default: var(--x-size-base-04);
  --x-size-padding-top-facet-header-default: var(--x-size-base-06);
  --x-size-padding-bottom-facet-header-default: var(--x-size-base-06);
  --x-size-font-facet-default: 14px;

  // Filters
  --x-size-padding-top-filter-default: var(--x-size-base-05);
  --x-size-padding-bottom-filter-default: var(--x-size-base-05);
  --x-size-padding-left-filter-default: var(--x-size-base-02);

  // Options list

  --x-size-padding-right-option-list-button-default: var(--x-size-base-05);
  --x-size-padding-left-option-list-button-default: var(--x-size-base-05);
  .x-facet {
    .x-option-list__item {
      --x-size-border-width-right-option-list-item-default: 0px;
    }
  }

  // Modal overlay
  --x-color-background-modal-overlay-default: var(--x-color-base-neutral-10);

  // Button
  --x-color-background-button-tertiary: rgba(255, 255, 255, 0.85);
  --x-color-text-button-tertiary: var(--x-color-base-lead);
  --x-size-border-width-button-tertiary: 0;
  --x-color-background-button-default: var(--x-color-base-lead);

  // Scroll
  .x-layout__aside--right {
    --x-string-overflow-scroll: scroll;
  }

  // My History
  .x-my-history-queries {
    --x-size-padding-top-suggestion-group-default: 0px;
    --x-size-padding-bottom-suggestion-group-default: 0px;
    --x-size-padding-left-suggestion-group-default: var(--x-size-base-07);
    --x-size-padding-right-suggestion-group-default: var(--x-size-base-07);

    .x-button {
      --x-color-text-button-default: var(--x-color-base-neutral-10);
    }
  }

  .x-mobile {
    // Grid
    --x-size-gap-grid: var(--x-size-base-03);
    --x-size-padding-grid: var(--x-size-base-05);

    // Result
    --x-size-gap-result-default: var(--x-size-base-01);

    // Sliding Panel
    --x-size-width-sliding-panel-gradient: var(--x-size-base-00);

    // Typography
    --x-size-font-title1: var(--x-size-font-base-l);

    // Options list
    --x-font-decoration-option-list-button-default-hover: none;

    .x-my-history-queries {
      --x-size-padding-left-suggestion-group-default: var(--x-size-base-05);
      --x-size-padding-right-suggestion-group-default: var(--x-size-base-05);
    }
  }
}

